# intelevator

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  building.cpp  building.h  client.h  config.yaml  config.yaml.bak  elevator.cpp  elevator.h  event.h  eventqueue.cpp  eventqueue.h  eventtype.cpp  eventtype.h  floor.cpp  floor.h  genreports.sh  intelevator.sublime-project  intelevator.sublime-workspace  log.conf  makefile  statistics.cpp  statistics.h  test_config.yaml  timer.cpp  timer.h  trip.cpp  trip.h
include/: Arrival.h  BNNDispatcher.h  BetterNearestNeighbourCostFunction.h  BetterNearestNeighbourDispatcher.h  BetterNearestNeighbourScheduler.h  Building.h  Client.h  ClientArrival.h  Clock.h  Config.h  CostFunction.h  CostFunctionCreator.h  CostFunctionDispatcher.h  CostFunctionType.h  CycleElevators.h  Direction.h  Dispatcher.h  DispatcherCreator.h  DispatcherType.h  DummyCostFunction.h  DummyDispatcher.h  DummyScheduler.h  Elevator.h  ElevatorArrival.h  ElevatorStatus.h  Event.h  EventComparator.h  EventDispatcher.h  EventFactory.h  EventNotifier.h  EventObserver.h  EventQueue.h  EventType.h  FinishSimulation.h  Floor.h  MissingCostFunctionError.h  MissingDispatcherError.h  MissingSchedulerError.h  NNCostFunction.h  NNDispatcher.h  (+35 more)
output/FACIN/1_Simple_Random/: averageWaitTime.eps
output/FACIN/2_Simple_NearestNeighbour/: averageWaitTime.eps
output/FACIN/3_Simple_BetterNearestNeighbour/: averageWaitTime.eps
output/FACIN/4_Simple_Weighted/: averageWaitTime.eps
output/FACIN/5_Planning_Random/: averageWaitTime.eps
output/Low-rise/6_Planning_NearestNeighbour/: arrivalsPerFloor.eps  averageTravelTime.eps  averageWaitTime.eps  clientsPerElevator.eps  dropoffsPerFloor.eps
output/Low-rise/7_Planning_BetterNearestNeighbour/: arrivalsPerFloor.eps  averageTravelTime.eps  averageWaitTime.eps  clientsPerElevator.eps  dropoffsPerFloor.eps
output/Low-rise/8_Planning_Weighted/: arrivalsPerFloor.eps  averageTravelTime.eps  averageWaitTime.eps  clientsPerElevator.eps  dropoffsPerFloor.eps
output/Skyscraper/1_Simple_Random/: arrivalsPerFloor.eps  clientsPerElevator.eps  dropoffsPerFloor.eps
src/: Arrival.cpp  BNNDispatcher.cpp  BetterNearestNeighbourCostFunction.cpp  BetterNearestNeighbourDispatcher.cpp  BetterNearestNeighbourScheduler.cpp  Building.cpp  Client.cpp  ClientArrival.cpp  Clock.cpp  Config.cpp  CostFunction.cpp  CostFunctionDispatcher.cpp  CycleElevators.cpp  Dispatcher.cpp  DummyCostFunction.cpp  DummyDispatcher.cpp  DummyScheduler.cpp  Elevator.cpp  ElevatorArrival.cpp  Event.cpp  EventComparator.cpp  EventDispatcher.cpp  EventFactory.cpp  EventQueue.cpp  FinishSimulation.cpp  Floor.cpp  NNCostFunction.cpp  NNDispatcher.cpp  NearestNeighbourCostFunction.cpp  NearestNeighbourDispatcher.cpp  NearestNeighbourScheduler.cpp  PlanningDispatcher.cpp  PlanningScheduler.cpp  RandomCostFunction.cpp  RandomDispatcher.cpp  RandomScheduler.cpp  Reporter.cpp  SayajinScheduler.cpp  Scenario.cpp  Scheduler.cpp  (+9 more)
test/: BuildingTest.cpp  ClientArrivalTest.cpp  ClientTest.cpp  ClockTest.cpp  ConfigTest.cpp  ElevatorTest.cpp  EventQueueTest.cpp  FloorTest.cpp  ScenarioTest.cpp  StopManagerTest.cpp  TimerTest.cpp
test/mocks/config/: simple.conf
tools/: Logparser.ipynb  TimeGraphs.ipynb  generateFakeReport.py  logparser.py
tools/.ipynb_checkpoints/: Arrivals-checkpoint.ipynb  Logparser-checkpoint.ipynb  TimeGraphs-checkpoint.ipynb
